--- a/About Me/index.html
+++ b/About Me/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>About Me</title>
     <style>
-        body {
-            background-color: orange;
-            color: white;
-        }
+      body {
+        background-color: orange;
+        color: white;
+      }
+
+      body {
+        color: orange;
+      }
     </style>
     <script>
-        function changecolor() {
-            document.getElementById("b1").style.background = "red";
-        }
+      function changecolor() {
+        document.getElementById("b1").style.background = "red";
+      }
     </script>
-</head>
+  </head>
 
-<body id="b1">
-    <h1> ABOUT ME</h1>
+  <body id="b1">
+    <h1>ABOUT ME</h1>
     <img src="picture.png" onclick="changecolor()" />
-    <p>Hi, my name is <i>Raveen Anand</i></p>
+    <p>Hi, my name is <i>Emma</i></p>
     <p>I am in Grade 7 and I study in City Public school.</p>
     <p>I am a <b> Junior Coder.</b> I love to Create Apps!</p>
-</body>
-
+  </body>
+  <a></a>
 </html>
